--- a/src/app/component/producto/producto.admin.create.routed/producto.admin.create.routed.component.html
+++ b/src/app/component/producto/producto.admin.create.routed/producto.admin.create.routed.component.html
@@ -202,7 +202,7 @@
                 <input
                   type="text"
                   class="form-control"
-                  formControlName="ean_c"
+                  formControlName="ean_caja"
                 />
               </div>
 
