--- a/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
+++ b/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
@@ -247,12 +247,27 @@
             <div class="mb-4" *ngIf="oProducto && oProducto.documentos && oProducto.documentos.length > 0">
               <label class="form-label fw-bold">Documentos actuales</label>
               <ul class="list-group">
-                <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let doc of oProducto.documentos">
-                  <a [href]="'http://localhost:8086' + doc.documentoUrl" target="_blank">{{ doc.nombreOriginal }}</a>
+                <li class="list-group-item d-flex align-items-center justify-content-between flex-wrap" *ngFor="let doc of oProducto.documentos">
+                  <a [href]="'http://localhost:8086' + doc.documentoUrl" target="_blank" class="me-3">
+                    {{ doc.nombreOriginal }}
+                  </a>                  
+                
+                  <select
+                    class="form-select form-select-sm w-auto me-3"
+                    [(ngModel)]="doc.tipo"
+                    [attr.name]="'tipoDocActual_' + doc.id"
+                    [ngModelOptions]="{ standalone: true }"
+                  >
+                    <option [ngValue]="'T'">Ficha técnica</option>
+                    <option [ngValue]="'N'">Ficha nutricional/alérgenos</option>
+                    <option [ngValue]="'L'">Ficha logística</option>
+                  </select>
+
                   <button type="button" class="btn btn-danger btn-sm" (click)="eliminarDocumento(doc.id)">
                     <i class="bi bi-trash"></i>
                   </button>
                 </li>
+                
               </ul>
             </div>
 
@@ -263,16 +278,43 @@
             </div>
 
             <!-- Vista previa de documentos nuevos -->
-            <div *ngIf="documentoPreviews.length > 0" class="col-12 text-center">
-              <label class="form-label fw-bold">Vista previa de documentos nuevos</label>h
-              <ul class="list-group">
-                <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let doc of documentoPreviews; let i = index">
-                  {{ doc }}
-                  <button type="button" class="btn btn-close" (click)="removeDocumento(i)"></button>
-
-                </li>
-              </ul>
-            </div>
+            <form #f="ngForm">
+              <div *ngIf="documentoPreviews.length > 0" class="col-12 text-center">
+                <label class="form-label fw-bold">Vista previa de documentos nuevos</label>
+                <ul class="list-group">
+                  <li
+                    class="list-group-item d-flex align-items-center justify-content-between flex-wrap"
+                    *ngFor="let doc of documentoNuevos; let i = index"
+                  >
+                    <span class="me-3">{{ doc.file.name }}</span>
+            
+                    <select
+                      class="form-select form-select-sm w-auto me-3"
+                      [(ngModel)]="documentoNuevos[i].tipo"
+                      [ngModelOptions]="{ standalone: true }"
+                      [ngClass]="{
+                        'is-invalid': documentoNuevos[i].tipo === '' || documentoNuevos[i].tipo == null
+                      }"
+                    >
+                      <option [ngValue]="''" disabled selected>Seleccione tipo</option>
+                      <option [ngValue]="'T'">Ficha técnica</option>
+                      <option [ngValue]="'N'">Ficha nutricional/alérgenos</option>
+                      <option [ngValue]="'L'">Ficha logística</option>
+                    </select>
+            
+                    <div
+                      *ngIf="documentoNuevos[i].tipo === '' || documentoNuevos[i].tipo == null"
+                      class="invalid-feedback d-block"
+                    >
+                      <i class="bi bi-exclamation-circle"></i> Debes seleccionar un tipo de documento
+                    </div>
+            
+                    <button type="button" class="btn-close" (click)="removeDocumento(i)"></button>
+                  </li>
+                </ul>
+              </div>
+            </form>
+            
 
             <!-- Botones -->
             <div class="text-center mt-4">
@@ -359,4 +401,24 @@
   </div>
 </div>
 
+<!-- Modal de confirmación de eliminación -->
+<div class="modal fade" id="eliminarModal" tabindex="-1" aria-labelledby="eliminarModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content border-danger shadow">
+      <div class="modal-header bg-danger text-white">
+        <h5 class="modal-title" id="eliminarModalLabel">
+          <i class="bi bi-trash-fill me-2"></i> Confirmar eliminación
+        </h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body text-center">
+        <p class="fs-5">¿Estás seguro de que deseas eliminar este elemento?</p>
+      </div>
+      <div class="modal-footer justify-content-center">
+        <button type="button" class="btn btn-outline-secondary px-4" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-danger px-4" (click)="confirmarEliminacion()">Eliminar</button>
+      </div>
+    </div>
+  </div>
+</div>
 
